--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 GXPEngine/obj
 .vs
 GXPEngine.userprefs
-
+GXPEngine.bin/Debug/GXPEngine.exe
+GXPEngine.bin/Debug/GXPEngine.pdb
 GXPEngine/bin/Release
