--- a/GXPEngine/GXPEngine.csproj
+++ b/GXPEngine/GXPEngine.csproj
@@ -87,6 +87,7 @@
     <Compile Include="GXPEngine\SoLoud\SoloudSoundSystem.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="WaitForSeconds.cs" />
+    <Compile Include="Wave.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
